--- a/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.scss
+++ b/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.scss
@@ -22,14 +22,13 @@ mat-form-field {
 	&__actions {
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: flex-start;
 	}
 
 	&__content {
 		margin-top: 8px;
 		display: flex;
 		align-items: center;
-		max-width: 400px;
 	}
 
 	&__link-container {
