--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
@@ -9,10 +9,14 @@ mat-form-field {
 	height: 100%;
 	overflow-y: auto;
 	border-radius: 8px;
-	margin: 16px;
 	background: #fff;
 	color: $text-black;
 	border: 1px solid $border-color;
+
+	&-wrapper {
+		height: 100%;
+		padding: 16px;
+	}
 
 	@media (min-width: $md) {
 		width: 350px;
@@ -87,9 +91,11 @@ mat-form-field {
 		width: 86%;
 		display: flex;
 		flex-direction: column;
+		align-items: start;
 	}
 
 	&__item-header {
+		width: 100%;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
