--- a/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.html
@@ -26,16 +26,12 @@
 	</div>
 </mat-dialog-content>
 
-<mat-dialog-actions
-	align="end"
-	class="dinvite__actions"
->
+<mat-dialog-actions class="dinvite__actions">
 	<button
 		type="submit"
-		mat-flat-button
-		color="primary"
-		(click)="onSubmit()"
+		mat-stroked-button
+		(click)="onCloseClick()"
 	>
-		Done
+		Close
 	</button>
 </mat-dialog-actions>
