feat: configuration changes

--- a/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/dialogs/dashboard-invite-dialog/dashboard-invite-dialog.component.html
@@ -5,7 +5,7 @@
 	Invitation
 </h4>
 
-<mat-dialog-content>
+<section mat-dialog-content>
 	<p class="dinvite__description">Anyone who has this link can join your team</p>
 
 	<div class="dinvite__content">
@@ -24,7 +24,7 @@
 			<mat-icon>content_copy</mat-icon>
 		</button>
 	</div>
-</mat-dialog-content>
+</section>
 
 <mat-dialog-actions class="dinvite__actions">
 	<button
