--- a/frontend/src/app/teams/submodules/settings/components/sections/settings-performance-section/settings-performance-section.component.html
+++ b/frontend/src/app/teams/submodules/settings/components/sections/settings-performance-section/settings-performance-section.component.html
@@ -3,8 +3,8 @@
 		<div class="settings__section-description">
 			<div class="settings__section-title">Performance Metrics</div>
 			<div class="settings__section-subtitle">
-				Adjust settings of your team members performance evaluation. <br />Can be updated each 3
-				days.
+				Adjust settings of your team members performance evaluation. The performance is reported
+				each 1 month period. <br />Metrics can be updated each 3 days.
 				@if (lastUpdatedDate) {
 					<span>Last updated at {{ lastUpdatedDate | date: 'MMMM d, y' }}</span>
 				}
