--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -36,6 +36,10 @@
 		padding: 0px;
 	}
 
+	.cdk-overlay-pane.mat-mdc-dialog-panel {
+		max-width: 90vw;
+	}
+
 	.page {
 		width: 100%;
 		padding: 22px;
