--- a/frontend/src/app/teams/submodules/dashboard/components/dashboard-analytics/dashboard-analytics.component.scss
+++ b/frontend/src/app/teams/submodules/dashboard/components/dashboard-analytics/dashboard-analytics.component.scss
@@ -31,7 +31,7 @@
 
 		&-section {
 			display: grid;
-			grid-template-columns: repeat(4, minmax(0, 1fr));
+			grid-template-columns: repeat(5, minmax(0, 1fr));
 			gap: 20px;
 
 			@media screen and (max-width: $md) {
@@ -46,10 +46,10 @@
 				background: #ffffff;
 
 				@media screen and (max-width: $md) {
-					grid-column: span 4 / span 4;
+					grid-column: span 5 / span 5;
 				}
 
-				&.tasks {
+				&.task {
 					grid-column: span 2 / span 2;
 				}
 
@@ -73,14 +73,14 @@
 			}
 
 			&-statistics {
-				grid-column: span 1 / span 1;
+				grid-column: span 2 / span 2;
 				padding: 20px;
 				border: 1px solid $border-color;
 				border-radius: 8px;
 				background: #ffffff;
 
 				@media screen and (max-width: $md) {
-					grid-column: span 4 / span 4;
+					grid-column: span 5 / span 5;
 				}
 
 				&.performance {
