bugfix: fixed performance issues

--- a/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
+++ b/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
@@ -44,7 +44,7 @@
 								</div>
 								<div class="kaizen__response-box">
 									<p class="kaizen__response-box-text">
-										{{ response.value }}
+										{{ getFormattedResponse(response.value) }}
 									</p>
 								</div>
 							</div>
