--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
@@ -115,6 +115,8 @@ mat-form-field {
 	}
 
 	&__item-body {
+		width: 100%;
+		text-align: left;
 		margin-top: 4px;
 		font-size: 12px;
 		text-overflow: ellipsis;
