--- a/frontend/src/app/teams/components/layout/teams-layout.component.html
+++ b/frontend/src/app/teams/components/layout/teams-layout.component.html
@@ -1,106 +1,108 @@
-@if (team$ | async; as team) {
-	<app-page-header [value]="team.name"></app-page-header>
-	<app-teams-navbar></app-teams-navbar>
-	<main class="container">
-		<router-outlet></router-outlet>
-	</main>
-}
+@if (team$ | withLoading | async; as team) {
+	@if (team.data) {
+		<app-page-header [value]="team.data.name"></app-page-header>
+		<app-teams-navbar></app-teams-navbar>
+		<main class="container">
+			<router-outlet></router-outlet>
+		</main>
+	}
 
-@if (loadingState.loading) {
-	<div class="teams__loading page">
-		<div class="teams__loading-container">
+	@if (team.loading) {
+		<div class="teams__loading page">
+			<div class="teams__loading-container">
+				<ngx-skeleton-loader
+					class="custom-skeleton"
+					count="1"
+					appearance="line"
+					[theme]="{
+						height: '35px',
+						'border-radius': '8px',
+						margin: '20px',
+						width: '250px',
+						flex: '1'
+					}"
+				/>
+				<ngx-skeleton-loader
+					class="custom-skeleton"
+					count="1"
+					appearance="line"
+					[theme]="{
+						height: '35px',
+						'border-radius': '8px',
+						margin: '20px 20px 20px 20px',
+						width: '150px',
+						flex: '1',
+						'text-align': 'right'
+					}"
+				/>
+			</div>
+
 			<ngx-skeleton-loader
 				class="custom-skeleton"
 				count="1"
 				appearance="line"
 				[theme]="{
-					height: '35px',
+					height: '300px',
 					'border-radius': '8px',
-					margin: '20px',
-					width: '250px',
-					flex: '1'
+					margin: '0 20px 20px 20px ',
+					width: '97%'
 				}"
 			/>
+
 			<ngx-skeleton-loader
 				class="custom-skeleton"
 				count="1"
 				appearance="line"
 				[theme]="{
-					height: '35px',
+					height: '50px',
 					'border-radius': '8px',
-					margin: '20px 20px 20px 20px',
-					width: '150px',
-					flex: '1',
-					'text-align': 'right'
+					margin: '0 20px 20px 20px',
+					width: '97%'
+				}"
+			/>
+
+			<ngx-skeleton-loader
+				class="custom-skeleton"
+				count="1"
+				appearance="line"
+				[theme]="{
+					height: '100px',
+					'border-radius': '8px',
+					margin: '0 20px 20px 20px',
+					width: '97%'
+				}"
+			/>
+
+			<ngx-skeleton-loader
+				class="custom-skeleton"
+				count="1"
+				appearance="line"
+				[theme]="{
+					height: '60px',
+					'border-radius': '8px',
+					margin: '0 20px 20px 20px',
+					width: '97%'
 				}"
 			/>
 		</div>
+	}
 
-		<ngx-skeleton-loader
-			class="custom-skeleton"
-			count="1"
-			appearance="line"
-			[theme]="{
-				height: '300px',
-				'border-radius': '8px',
-				margin: '0 20px 20px 20px ',
-				width: '97%'
-			}"
-		/>
-
-		<ngx-skeleton-loader
-			class="custom-skeleton"
-			count="1"
-			appearance="line"
-			[theme]="{
-				height: '50px',
-				'border-radius': '8px',
-				margin: '0 20px 20px 20px',
-				width: '97%'
-			}"
-		/>
-
-		<ngx-skeleton-loader
-			class="custom-skeleton"
-			count="1"
-			appearance="line"
-			[theme]="{
-				height: '100px',
-				'border-radius': '8px',
-				margin: '0 20px 20px 20px',
-				width: '97%'
-			}"
-		/>
-
-		<ngx-skeleton-loader
-			class="custom-skeleton"
-			count="1"
-			appearance="line"
-			[theme]="{
-				height: '60px',
-				'border-radius': '8px',
-				margin: '0 20px 20px 20px',
-				width: '97%'
-			}"
-		/>
-	</div>
-}
-
-@if (loadingState.error) {
-	<div class="teams__error page">
-		<h1 class="teams__error-title">404</h1>
-		<div class="teams__error-content">
-			<h2 class="teams__error-subtitle">
-				Oops.. <br />
-				We couldn't find a team you are looking for.
-			</h2>
-			<button
-				mat-flat-button
-				color="primary"
-				routerLink="/hub/overview"
-			>
-				<a routerLink="/hub/overview">Return Back</a>
-			</button>
+	@if (team.error) {
+		<div class="teams__error page">
+			<h1 class="teams__error-title">404</h1>
+			<div class="teams__error-content">
+				<h2 class="teams__error-subtitle">
+					Oops.. <br />
+					We couldn't find a team you are looking for.
+				</h2>
+				<button
+					mat-flat-button
+					color="primary"
+					routerLink="/hub/overview"
+				>
+					<a routerLink="/hub/overview">Return Back</a>
+				</button>
+			</div>
 		</div>
-	</div>
+	}
 }
