added global loader (#55)
* added global loader

* added global loader

* edited gitignore

* edited

* edited

---------

Co-authored-by: Moonapso <100219166+Moonapso@users.noreply.github.com>

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,10 @@
 @if (isAuthLoading$ | async) {
 	<div class="auth-loading">
-		<p>KAITEKI</p>
+		<ng-lottie
+			[options]="options"
+			width="300px"
+			height="400px"
+		/>
 	</div>
 } @else {
 	<router-outlet></router-outlet>
