--- a/frontend/src/app/teams/submodules/dashboard/components/analytics/analytics-performance-section/analytics-performance-section.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/analytics/analytics-performance-section/analytics-performance-section.component.html
@@ -9,7 +9,7 @@
 					></mat-progress-spinner>
 
 					<p class="dashboard__analytics-performance-value">
-						{{ teamPerformance.data.performance }}%
+						{{ teamPerformance.data.performance | number:'1.1-1' }}%
 					</p>
 				</div>
 
