--- a/frontend/src/app/teams/submodules/dashboard/components/sidebar/sidebar-top-members/sidebar-top-members.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/sidebar/sidebar-top-members/sidebar-top-members.component.html
@@ -23,7 +23,7 @@
 						</div>
 
 						<p class="dashboard__analytics-member-item-performance">
-							{{ member.performance * 100 }} %
+							{{ member.performance * 100 | number:'1.1-1'}} %
 						</p>
 					</div>
 
