Feature/tasks export (#59)
* feat: added exporting the tasks

* refactor: swtichted to byte resource stream in files

--- a/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
@@ -1,6 +1,6 @@
 <section class="filter">
 	<mat-accordion>
-		<mat-expansion-panel>
+		<mat-expansion-panel [expanded]="expanded">
 			<mat-expansion-panel-header>
 				<mat-panel-title>Filters</mat-panel-title>
 			</mat-expansion-panel-header>
