--- a/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
@@ -16,9 +16,10 @@
 		<app-button
 			variant="outline"
 			class="tasks__toolbar-item"
-			icon="share"
+			icon="download"
+			(click)="onExportClick()"
 		>
-			<p>Share</p>
+			<p>Export</p>
 		</app-button>
 
 		<app-button
